--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "watch": "tsc --watch"
+    "build": "tsc && node dist/index.js",
+    "watch": "nodemon -e ts --exec \"npm run build\""
   },
   "repository": {
     "type": "git",
